# ashersfunctionlib

./: .gitignore  CMakeLists.txt  README.md  X25519.c  X25519.h  X25519_test.c  X3DH.c  X3DH.h  aes.c  aes.h  cbc.c  cbc.h  double_ratchet.c  double_ratchet.h  double_ratchet_test.c  double_ratchet_test.h  flow.md  main_test.c  main_test.h  session_manager.c  session_manager.h  session_manager_test.c  session_manager_test.h  session_test.c  session_test.h  sha256.c  sha256.h  tests  wasm_interface.c  wasm_interface.h
demo/: Dockerfile  compile.sh  emcc_compile_script.txt  index.html  index_old.html  python_ffi_compile_script.txt  server.py
demo/static/: crypto_wasm.js  crypto_wasm.wasm
include/: X25519.h  aes.h  cbc.h  double_ratchet.h  double_ratchet_test.h  session_manager.h  session_manager_test.h  sha256.h
src/: X25519.c  X25519_test.c  X3DH.c  aes.c  cbc.c  double_ratchet.c  double_ratchet_test.c  main_test.c  session_manager.c  session_manager_test.c  session_test.c  sha256.c  wasm_interface.c
